--- a/jr.css/jr.scss
+++ b/jr.css/jr.scss
@@ -105,6 +105,14 @@ input.jr + small.jr{
   margin-bottom: 1.25rem;
 }
 
+.jr.text-v-center::before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.25em; /* Adjusts for spacing */
+}
+
 $breakpoints: (s: 0px, m: 720px, l: 1024px);
 
 @each $key, $bkpt in $breakpoints {
