--- a/jr.css/jr.scss
+++ b/jr.css/jr.scss
@@ -173,6 +173,7 @@ $breakpoints: (s: 0px, m: 720px, l: 1024px);
     
     .jr.flex#{$mod}-row{
       display: flex;
+      flex-direction: row;
       flex-wrap: nowrap;
     }
     
